--- a/FromScratch/agent.ipynb
+++ b/FromScratch/agent.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,41 +191,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Thought: To solve this problem, I need to find the mass of the Earth and the mass of Mercury, add them together, and then multiply the result by 5. First, I'll find the mass of the Earth.\n",
+      "Thought: To find the mass of the Earth plus the mass of Mercury and then multiply the sum by 5, I first need to find the mass of the Earth and the mass of Mercury. \n",
       "\n",
       "Action: get_planet_mass: Earth\n",
       "PAUSE\n",
       "Observation: 5.972e+24\n",
-      "Thought: Now that I have the mass of the Earth, I need to find the mass of Mercury.\n",
+      "Thought: I now have the mass of the Earth, which is 5.972e+24 kg. Next, I need to find the mass of Mercury.\n",
       "\n",
       "Action: get_planet_mass: Mercury\n",
       "PAUSE\n",
       "Observation: 3.285e+23\n",
-      "Thought: I now have the masses of both Earth and Mercury. I'll add these two masses together to get the total mass.\n",
+      "Thought: I now have the masses of both the Earth (5.972e+24 kg) and Mercury (3.285e+23 kg). The next step is to add these two masses together and then multiply the sum by 5.\n",
       "\n",
-      "Action: calculate: 5.972e+24 + 3.285e+23\n",
-      "PAUSE\n",
-      "Observation: 6.300500000000001e+24\n",
-      "Thought: Now that I have the total mass of Earth and Mercury, I need to multiply this result by 5 to get the final answer.\n",
-      "\n",
-      "Action: calculate: 6.300500000000001e+24 * 5\n",
+      "Action: calculate: (5.972e+24 + 3.285e+23) * 5\n",
       "PAUSE\n",
       "Observation: 3.1502500000000004e+25\n",
-      "Thought: I have now calculated the total mass of Earth and Mercury multiplied by 5, so I can provide the final answer.\n",
+      "Thought: I have now calculated the sum of the masses of the Earth and Mercury, and then multiplied this sum by 5, resulting in 3.1502500000000004e+25 kg. This is the final step in solving the problem.\n",
       "\n",
-      "Answer: The mass of the Earth plus the mass of Mercury and all of it times 5 is 3.15025e+25.\n"
+      "Answer: The mass of the Earth plus the mass of Mercury and all of it times 5 is 3.15025e+25 kg.\n"
      ]
     }
    ],
    "source": [
     "loop(max_iterations = 5, query=\"What is the mass of the earth plus the mass of the mercury and all of it times 5?\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Let's just print the answer"
    ]
   },
   {
